@@ -58,7 +58,6 @@ foreach(PKG ${REQUIRE_TRILI_PKG})
   endif()
   message(STATUS "Look for required Trilinos package ${PKG}...")
   if (${${PKG}_FOUND})
-    message(STATUS "TROET: include_directories(${${PKG}_INCLUDE_DIRS}")
     include_directories(${${PKG}_INCLUDE_DIRS})
     include_directories(${${PKG}_TPL_INCLUDE_DIRS})
     link_directories(${${PKG}_LIBRARY_DIRS})
